--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whos-that-pokemon",
+  "name": "hubot-whos-that-pokemon",
   "description": "Play Who's That Pokemon? with Hubot using the Gen I lineup.",
   "version": "0.0.1",
   "author": "Matt Antonelli <mattr.antonelli@gmail.com>",
