--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hubot-whos-that-pokemon",
   "description": "Play Who's That Pokemon? with Hubot using the Gen I lineup.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Matt Antonelli <mattr.antonelli@gmail.com>",
   "license": "MIT",
 
@@ -21,7 +21,8 @@
   },
 
   "dependencies": {
-    "coffee-script": "~1.6"
+    "coffee-script": "~1.6",
+    "hubot-redis-brain": "0.0.2"
   },
 
   "devDependencies": {
